--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
 
-/* Importing Bootstrap SCSS file. */
-@use 'bootstrap/scss/bootstrap';
+/* Global styles. Bootstrap is loaded via CDN in index.html to bypass Angular CSS processing. */
